--- a/docs/jamesdocs.tex
+++ b/docs/jamesdocs.tex
@@ -685,6 +685,13 @@ donordata\strut
 Fit and store brokenstick model for D-score on SMOCC data\strut
 \end{minipage}\tabularnewline
 \begin{minipage}[t]{0.26\columnwidth}\raggedright
+donorloader\strut
+\end{minipage} & \begin{minipage}[t]{0.29\columnwidth}\raggedright
+\href{https://github.com/stefvanbuuren/donorloader/commit/c22c44607b40ff6bda2009c25894362b68831275}{c22c446}\strut
+\end{minipage} & \begin{minipage}[t]{0.36\columnwidth}\raggedright
+Update internal data after changes in donordata\strut
+\end{minipage}\tabularnewline
+\begin{minipage}[t]{0.26\columnwidth}\raggedright
 jamesdocs\strut
 \end{minipage} & \begin{minipage}[t]{0.29\columnwidth}\raggedright
 TBD\strut
