--- a/Rmd/05-D-score-implementation.Rmd
+++ b/Rmd/05-D-score-implementation.Rmd
@@ -35,3 +35,10 @@ donordata  | [ecb3413](https://github.com/stefvanbuuren/donordata/commit/ecb3413
 donordata  | [3fa9d4d](https://github.com/stefvanbuuren/donordata/commit/3fa9d4de347d09ccff32a887cf6bd8dadfdfaeb6) | Fit and store brokenstick model for D-score on SMOCC data
 donorloader | [c22c446](https://github.com/stefvanbuuren/donorloader/commit/c22c44607b40ff6bda2009c25894362b68831275) | Update internal data after changes in donordata
 jamesdocs  | TBD | Document steps (this file)
+donordata  | [94937e5](https://github.com/stefvanbuuren/donordata/commit/7983c3d81a69eb9c6b81a3e0f0668e892c5abf5a) | Saves the item scores to create JSON files
+donordata  | [390adca](https://github.com/stefvanbuuren/donordata/commit/1537182a0df4180e0000d59225c6355a9c506472) | Save mapping between SMOCC and BDS coding scheme
+donorloader | [90ce41f](https://github.com/stefvanbuuren/donorloader/commit/e9a8ed9054ebe1ba3a060883d53cfa0ce1f963d2) | Make `smocc_bds` available to JAMES
+minihealth | [b9a4a23](https://github.com/stefvanbuuren/minihealth/commit/badf9232605065c6e00cc66bb6c795f7c20ed318) | Add two classes to store and convert to BDS number individual milestones data
+jamestest  | [89dad46](https://github.com/stefvanbuuren/jamestest/commit/e5dee9bed5b4fdf7f78240da52efa5d865d156ad) | Update the `installed.cabinets` object with the new individual milestones data
+
+
