--- a/Rmd/06-docker.Rmd
+++ b/Rmd/06-docker.Rmd
@@ -29,11 +29,10 @@ The following is needed to build and run a JAMES image:
 ## Dockerfile
 
 ```{bash}
-FROM opencpu/rstudio as intermediate
+FROM opencpu/base as intermediate
 
 # install for V8 package
-RUN apt-get update && apt-get install -y \ 
-    libv8-dev
+RUN apt-get update && apt-get install -y libnode-dev
 
 # repo_token.txt should be something like "GITHUB_PAT=624adeaa..."
 # to be able to install packages from private repo's
@@ -42,25 +41,71 @@ COPY repo_token.txt .Renviron
 # install R packages needed for JAMES
 RUN \
     R -e 'install.packages("remotes")' \
+    R -e 'remotes::install_github("stefvanbuuren/clopus")' \
+    R -e 'remotes::install_github("stefvanbuuren/dscore")' \
+    R -e 'remotes::install_github("stefvanbuuren/chartbox")' \
+    R -e 'remotes::install_github("stefvanbuuren/brokenstick")' \
+    R -e 'remotes::install_github("stefvanbuuren/minihealth")' \
+    R -e 'remotes::install_github("stefvanbuuren/jamestest")' \
+    R -e 'remotes::install_github("stefvanbuuren/growthscreener")' \
     R -e 'remotes::install_github("stefvanbuuren/james")'
 
-# rebuild the layer
-FROM opencpu/rstudio
+# rebuild layer without .Renviron
+FROM opencpu/base
 
 LABEL maintainer="stef.vanbuuren@tno.nl" 
 
 # re-install for V8 package
-RUN apt-get update && apt-get install -y \ 
-    libv8-dev
+RUN apt-get update && apt-get install -y libnode-dev
 
+# copy R libraries
 COPY --from=intermediate /usr/local/lib/R/site-library /usr/local/lib/R/site-library
 
-CMD service cron start && /usr/lib/rstudio-server/bin/rserver && apachectl -DFOREGROUND
+# modify preload section
+COPY james.conf /etc/opencpu/server.conf.d/james.conf
+
+# install Arial
+RUN mkdir /usr/share/fonts/truetype/arial/
+COPY fonts/truetype/arial/* /usr/share/fonts/truetype/arial/
+
+CMD service cron start && apachectl -DFOREGROUND
 ```
 
 - Create a fresh directory, and `cd` to this directory in your terminal
 - Store the script given above in a file named `Dockerfile`
 - Create a file named `repo_token.txt` with one line: `GITHUB_PAT=624adeaa...` with your token
+- Create `fonts/truetype/arial` with the proper `ttf` files
+- Create a file `james.conf` specifying the preload libraries
+
+```{bash}
+{
+    "enable.api.library": true,
+    "enable.api.apps": true,
+    "enable.api.user": true,
+    "enable.api.tmp": true,
+    "enable.cors" : true,
+    "enable.post.code": true,
+    "enable.rlimits" : true,
+    "error.showcall": true,
+    "smtp.server" : "localhost",
+    "smtp.use.ssl" : "no",
+    "httpcache.post": 300,
+    "httpcache.lib": 86400,
+    "httpcache.apps": 900,
+    "httpcache.tmp": 86400,
+    "httpcache.static": 31536000,
+    "key.length" : 13,
+    "repos": "https://cran.rstudio.com",
+    "rlimit.as": 4e9,
+    "rlimit.fsize": 1e9,
+    "rlimit.nproc": 500,
+    "timelimit.get": 60,
+    "timelimit.post": 90,
+    "timelimit.webhook": 900,
+    "preload": ["clopus", "donorloader", "chartbox", "brokenstick", "minihealth", "growthscreener", "james"]
+}
+```
+
 
 ## Docker commands 
 
@@ -70,16 +115,16 @@ Build the `james` image, type in a terminal
 docker build -t james .
 ```
 
-This may takes a long time (30-60 minutes), in which the entire application is downloaded from various web-locations. After (hopefully succesful) completion, check the image
+This may takes a long time (30 minutes), in which the entire application is downloaded from various web-locations. After (hopefully succesful) completion, check the image
 
 ```{bash}
-docker images
+docker images -a
 ```
 
 If all is well, the top line is called `james`. Now run the container on your local machine:
 
 ```{bash}
-docker run -t -d -p 80:80 -p 8004:8004 james
+docker run -t -d -p 80:80 james
 ```
 
 If the ports are already taken by other containers, stop and remove all containers:
@@ -96,6 +141,21 @@ docker ps
 ```
 
 which should list a container created from the `james` image.
+
+If you want to enter the container use
+
+```{bash}
+docker exec -i -t 6c /bin/bash
+```
+
+where `6c` are the first two characters of the container ID.
+
+Inside the container, check font matching of Arial as
+
+```{bash}
+fc-match Arial
+```
+
 
 ## Checks with the browser
 
@@ -115,7 +175,7 @@ should show `OpenCPU` test page.
 http://localhost/rstudio/
 ```
 
-should start the Rstudio IDE on the container. Use `opencpu:opencpu` to log in.
+should start the Rstudio IDE - *if installed* . Use `opencpu:opencpu` to log in.
 
 
 ```{bash}
@@ -128,7 +188,8 @@ See also <https://registry.hub.docker.com/r/opencpu/rstudio>
 
 ## Security
 
-1. The container is shielded from the machine on which it runs. However, the materials within the container are not protected. 
-2. Don't use intermediate containers, since these contain your token in `/.Renviron`. The latest (`james`) container does not hold your token, and can be shared, of course, keeping in mind remark 1.
+1. Don't use the intermediate container, since it will contain your token in `/.Renviron`. The latest (`james`) container does not hold your token, and can be shared.
+2. The container is shielded from the machine on which it runs. However, the materials within the container are only protected by `R_LIMITS`. In general, for production it is wise to add restriction on the `OpenCPU` server.
+
 
 
