Try building book: but we get "output file: jamesdocs.knit.md Error: Input files not all in same directory, please supply explicit wd Execution halted"

--- a/index.Rmd
+++ b/index.Rmd
@@ -19,4 +19,5 @@ This is very, very first minimal documentation of JAMES internals.
 knitr::write_bib(c(
   .packages(), 'bookdown', 'knitr', 'rmarkdown'
 ), 'packages.bib')
+options(bookdown.render.file_scope = FALSE)
 ```
